--- a/crud_repositories/crud_repositories/src/main/resources/application.properties
+++ b/crud_repositories/crud_repositories/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=crud_repositories
+
+spring.datasource.url=jdbc:mysql://localhost:3306/crudRepositor
+spring.datasource.username=root
+spring.datasource.password=senha
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+
+#Minha senha é outra
