--- a/medica/medica/src/main/resources/application.properties
+++ b/medica/medica/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=medica
+
+spring.datasource.url=jdbc:mysql://localhost:3306/clinicaMedica
+spring.datasource.username=root
+spring.datasource.password=senha
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
