--- a/teste/teste/src/main/resources/application.properties
+++ b/teste/teste/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=teste
+
+spring.datasource.url=jdbc:postgresql://localhost:6000/outrod
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
